change all images

--- a/index.html
+++ b/index.html
@@ -258,7 +258,7 @@
                         </div>
                         <div class="img-row-second">
                             <div class="image-item">
-                                <img src="https://wallpapercat.com/w/full/d/d/2/1068992-1920x1200-desktop-hd-tom-and-jerry-background-photo.jpg" alt="Tom-and-jerry">   
+                                <img src="https://m.media-amazon.com/images/M/MV5BNzY5MDQzOTAwNV5BMl5BanBnXkFtZTcwNTY0NTk1Nw@@._V1_QL75_UX311_.jpg" alt="Tom-and-jerry">   
                             </div>
                             <div class="image-column">
                                 <div class="image-list-card1">
@@ -278,7 +278,7 @@
                         </div>
                         <div class="img-row-second">
                             <div class="image-item">
-                                <img src="https://media.gettyimages.com/id/563818463/photo/band-performing-on-stage-at-music-concert.jpg?s=612x612&w=0&k=20&c=e0qzK3-5Wi07FErbiN-XQf-2RfJsSp8j_GG6n6_Kuvs=" alt="stage-at-music">                
+                                <img src="https://m.media-amazon.com/images/M/MV5BNjgyNzY0OTM3M15BMl5BanBnXkFtZTcwNzk4MjE1Nw@@._V1_QL75_UX402_.jpg" alt="stage-at-music">                
                             </div>
                             <div class="image-column">
                                 <div class="image-list-card1">
@@ -331,7 +331,7 @@
                     <div class="img-container_two">
                         <div class="img-row-third">
                             <div class="img-item-second-row">
-                                <img src="https://t4.ftcdn.net/jpg/10/58/31/97/360_F_1058319760_XIRW4B6xEimsisOMBHqdSwZPRlMPUZZc.webp" alt="RAMBO-Front-page">                       
+                                <img src="https://i.pinimg.com/236x/d6/bf/e7/d6bfe7c419e7e777eaa6c330d6dc51b9.jpg" alt="RAMBO-Front-page">                       
                             </div>
                             <div class="image-column">
                                 <div class="image-list-card">
@@ -351,7 +351,7 @@
                         </div>
                         <div class="img-row-third">
                             <div class="img-item-second-row">
-                                <img src="https://t4.ftcdn.net/jpg/09/07/82/47/240_F_907824791_WAce6o9HCCPVptj4ftDDKBJ9KhkvSBAd.jpg" alt="lord-krishna-vector">
+                                <img src="https://i.pinimg.com/236x/12/7a/49/127a49cd38422be6b4c97ed38606d3f9.jpg" alt="boolwood">
                             </div>
                             <div class="image-column">
                                 <div class="image-list-card">
@@ -371,7 +371,7 @@
                         </div>
                         <div class="img-row-third">
                             <div class="img-item-second-row">
-                                <img src="https://thumbs.dreamstime.com/b/badrinath-temple-uttarakhand-india-snowfall-ancient-lord-vishnu-temple-badrinath-char-dham-uttarakhand-india-187823848.jpg" alt="Badrinaath">                     
+                                <img src="https://i.pinimg.com/474x/9c/32/59/9c3259316712cc077b8f2336a8f6536f.jpg" alt="Badrinaath">                     
                             </div>
                             <div class="image-column">
                                 <div class="image-list-card">
@@ -391,7 +391,7 @@
                         </div>
                         <div class="img-row-forth">
                             <div class="img-item-second-row">
-                                <img src="https://s1.dmcdn.net/u/5QFP01clSsfc8YRrD/200x200" alt="Bablu-Dablu-Cubs">                  
+                                <img src="https://i.pinimg.com/236x/20/90/26/2090264b3a79f66b5fcec1d38009393a.jpg" alt="Bablu-Dablu-Cubs">                  
                             </div>
                             <div class="image-column">
                                 <div class="image-list-card">
@@ -411,7 +411,7 @@
                         </div>
                         <div class="img-row-forth">
                             <div class="img-item-second-row">
-                                <img src="https://t4.ftcdn.net/jpg/09/22/93/21/360_F_922932127_jwHa6rspjC0O1tM1cZz24RPN5w6UpZk1.jpg" alt="Little-Krishna">
+                                <img src="https://i.pinimg.com/236x/6f/b0/e6/6fb0e6c3a5e05f1685a0e441a234afec.jpg" alt="Sunset Over Ocean">
                             </div>
                             <div class="image-column">
                                 <div class="image-list-card">
@@ -419,7 +419,7 @@
                                         <img src="https://t4.ftcdn.net/jpg/05/49/98/67/360_F_549986733_NOkIdqXufSSX5o0NEVcWUOE8M8B9p7Vu.jpg" alt="Thumbnail">
                                     </div>
                                     <div class="image-information">
-                                        <div class="image-title">Little Krishna Song.</div>
+                                        <div class="image-title">Sunset Over Ocean.</div>
                                         <div class="chainnel-name">Yuotube</div>
                                         <div class="views-status">1.6M views</div>
                                     </div>
@@ -431,7 +431,7 @@
                         </div>
                         <div class="img-row-forth">
                             <div class="img-item-second-row">
-                                <img src="https://i.pinimg.com/236x/6f/b0/e6/6fb0e6c3a5e05f1685a0e441a234afec.jpg" alt="Sunset Over Ocean">                  
+                                <img src="https://t4.ftcdn.net/jpg/09/07/82/47/240_F_907824791_WAce6o9HCCPVptj4ftDDKBJ9KhkvSBAd.jpg" alt="lord-krishna-vector">                  
                             </div>
                             <div class="image-column">
                                 <div class="image-list-card">
@@ -439,7 +439,7 @@
                                         <img src="https://i.pinimg.com/236x/55/d1/20/55d120615ec9bd3eaced030fb003dbca.jpg" alt="Thumbnail">
                                     </div>
                                     <div class="image-information">
-                                        <div class="image-title">Sunset Over Ocean</div>
+                                        <div class="image-title">Little Krishna song.</div>
                                         <div class="chainnel-name ">Yuotube</div>
                                         <div class="views-status">2.72M views</div>
                                     </div>
@@ -453,7 +453,7 @@
                         <div class="image-container">
                             <div class="image-row-box">
                                 <div class="image-block">
-                                    <img src="https://wallpapercat.com/w/full/d/d/2/1068992-1920x1200-desktop-hd-tom-and-jerry-background-photo.jpg" alt="bollywoodhungama">
+                                    <img src="https://m.media-amazon.com/images/M/MV5BNzY5MDQzOTAwNV5BMl5BanBnXkFtZTcwNTY0NTk1Nw@@._V1_QL75_UX311_.jpg" alt="bollywoodhungama">
                                 </div>
                                 <div class="image-details">
                                     <div class="image-card">
@@ -473,7 +473,7 @@
                             </div>
                             <div class="image-row-box">
                                 <div class="image-block">
-                                    <img src="https://media.gettyimages.com/id/563818463/photo/band-performing-on-stage-at-music-concert.jpg?s=612x612&w=0&k=20&c=e0qzK3-5Wi07FErbiN-XQf-2RfJsSp8j_GG6n6_Kuvs=" alt="bollywoodhungama">
+                                    <img src="https://m.media-amazon.com/images/M/MV5BNjgyNzY0OTM3M15BMl5BanBnXkFtZTcwNzk4MjE1Nw@@._V1_QL75_UX402_.jpg" width="250px" alt="bollywoodhungama">
                                 </div>
                                 <div class="image-details">
                                     <div class="image-card">
