Changed image and tittle name

--- a/index.html
+++ b/index.html
@@ -481,7 +481,7 @@
                                     </div>
                                     <div class="image-information">
                                         <div class="image-title">Little Krishna song.</div>
-                                        <div class="chainnel-name ">Yuotube</div>
+                                        <div class="chainnel-name ">Youtube</div>
                                         <div class="views-status">2.72M views</div>
                                     </div>
                                     <div class="options-menubox">
@@ -494,7 +494,7 @@
 
                         <div class="img-row-forth">
                             <div class="img-item-second-row">
-                                <img src="https://t4.ftcdn.net/jpg/09/07/82/47/240_F_907824791_WAce6o9HCCPVptj4ftDDKBJ9KhkvSBAd.jpg"
+                                <img src="https://storage.googleapis.com/dev-cms-image-test/movie/3/1066143/img145210/6929453/1066143_6929453.jpg"
                                     alt="lord-krishna-vector">
                             </div>
                             <div class="image-column">
@@ -505,7 +505,7 @@
                                     </div>
                                     <div class="image-information">
                                         <div class="image-title">Little Krishna song.</div>
-                                        <div class="chainnel-name ">Yuotube</div>
+                                        <div class="chainnel-name ">Youtube</div>
                                         <div class="views-status">2.72M views</div>
                                     </div>
                                     <div class="options-menubox">
@@ -564,6 +564,9 @@
                                 </div>
                             </div>
                         </div>
+                    </div>
+                    <div class="">
+
                     </div>
                 </section>
             </div>
