--- a/index.html
+++ b/index.html
@@ -504,7 +504,7 @@
                                             alt="Thumbnail">
                                     </div>
                                     <div class="image-information">
-                                        <div class="image-title">Little Krishna song.</div>
+                                        <div class="image-title">Shotgun Love Story</div>
                                         <div class="chainnel-name ">Youtube</div>
                                         <div class="views-status">2.72M views</div>
                                     </div>
@@ -517,7 +517,7 @@
                         </div>
                     </div>
 
-                    <div class="image-container">
+                    <div class="image-container2">
                         <div class="image-row-box">
                             <div class="image-block">
                                 <img src="https://m.media-amazon.com/images/M/MV5BNzY5MDQzOTAwNV5BMl5BanBnXkFtZTcwNTY0NTk1Nw@@._V1_QL75_UX311_.jpg"
@@ -564,9 +564,6 @@
                                 </div>
                             </div>
                         </div>
-                    </div>
-                    <div class="">
-
                     </div>
                 </section>
             </div>
