Changed title name

--- a/index.html
+++ b/index.html
@@ -207,7 +207,7 @@
                         <div class="category-item-col">Movies</div>
                         <div class="category-item-col">Chess</div>
                         <div class="category-item-col2">darama</div>
-                        <div class="category-item-col2">mixes</div>
+                        <!-- <div class="category-item-col2">mixes</div> -->
                         <div class="category-item-col2">Songs</div>
                         <div class="category-item-col2">Live</div>
                         <div class="category-item-col1">Live</div>
@@ -517,7 +517,7 @@
                         </div>
                     </div>
 
-                    <div class="image-container2">
+                    <div class="image-container-row">
                         <div class="image-row-box">
                             <div class="image-block">
                                 <img src="https://m.media-amazon.com/images/M/MV5BNzY5MDQzOTAwNV5BMl5BanBnXkFtZTcwNTY0NTk1Nw@@._V1_QL75_UX311_.jpg"
@@ -564,6 +564,9 @@
                                 </div>
                             </div>
                         </div>
+                    </div>
+                    <div class="">
+
                     </div>
                 </section>
             </div>
