Changed icons size

--- a/index.html
+++ b/index.html
@@ -207,7 +207,7 @@
                         <div class="category-item-col">Movies</div>
                         <div class="category-item-col">Chess</div>
                         <div class="category-item-col2">darama</div>
-                        <!-- <div class="category-item-col2">mixes</div> -->
+                        <div class="category-item-col1">mixes</div>
                         <div class="category-item-col2">Songs</div>
                         <div class="category-item-col2">Live</div>
                         <div class="category-item-col1">Live</div>
@@ -239,7 +239,7 @@
                                         <div class="chainnel-name">youtube</div>
                                         <div class="views-status">27.7K views</div>
                                     </div>
-                                    <div class="options-menubox">
+                                    <div class="options-menubox1">
                                         <img src="https://i.seadn.io/gae/DxuPyH6YDYWw9cuPYmMv1BTtCiroBh7Nkn94CBthlYxYxXejxNiy80O26i9WdCvpr1Rc5ZIdGl-uGTfjRwdKyV4UfuahE_Cqq205_K8?auto=format&dpr=1&w=1000"
                                             alt="imgpointbox">
                                     </div>
@@ -262,7 +262,7 @@
                                         <div class="chainnel-name">SET India</div>
                                         <div class="views-status">23.67M views</div>
                                     </div>
-                                    <div class="options-menubox">
+                                    <div class="options-menubox1">
                                         <img src="https://i.seadn.io/gae/DxuPyH6YDYWw9cuPYmMv1BTtCiroBh7Nkn94CBthlYxYxXejxNiy80O26i9WdCvpr1Rc5ZIdGl-uGTfjRwdKyV4UfuahE_Cqq205_K8?auto=format&dpr=1&w=1000"
                                             alt="imgpointbox">
                                     </div>
@@ -285,7 +285,7 @@
                                         <div class="chainnel-name ">Yuotube</div>
                                         <div class="views-status">2.67M views</div>
                                     </div>
-                                    <div class="options-menubox">
+                                    <div class="options-menubox1">
                                         <img src="https://i.seadn.io/gae/DxuPyH6YDYWw9cuPYmMv1BTtCiroBh7Nkn94CBthlYxYxXejxNiy80O26i9WdCvpr1Rc5ZIdGl-uGTfjRwdKyV4UfuahE_Cqq205_K8?auto=format&dpr=1&w=1000"
                                             alt="imgpointbox">
                                     </div>
@@ -308,7 +308,7 @@
                                         <div class="chainnel-name">Youtube</div>
                                         <div class="views-status">1.77M views</div>
                                     </div>
-                                    <div class="options-menubox">
+                                    <div class="options-menubox1">
                                         <img src="https://i.seadn.io/gae/DxuPyH6YDYWw9cuPYmMv1BTtCiroBh7Nkn94CBthlYxYxXejxNiy80O26i9WdCvpr1Rc5ZIdGl-uGTfjRwdKyV4UfuahE_Cqq205_K8?auto=format&dpr=1&w=1000"
                                             alt="imgpointbox">
                                     </div>
@@ -331,7 +331,7 @@
                                         <div class="chainnel-name ">youtube</div>
                                         <div class="views-status">1.6M views</div>
                                     </div>
-                                    <div class="options-menubox">
+                                    <div class="options-menubox1">
                                         <img src="https://i.seadn.io/gae/DxuPyH6YDYWw9cuPYmMv1BTtCiroBh7Nkn94CBthlYxYxXejxNiy80O26i9WdCvpr1Rc5ZIdGl-uGTfjRwdKyV4UfuahE_Cqq205_K8?auto=format&dpr=1&w=1000"
                                             alt="imgpointbox">
                                     </div>
@@ -339,6 +339,9 @@
                             </div>
                         </div>
                     </div>
+
+
+
 
                     <div class="icon-div">
                         <div class="icon-short">
