--- a/index.html
+++ b/index.html
@@ -290,7 +290,7 @@
                                             alt="imgpointbox">
                                     </div>
                                 </div>
-                            </div>
+                                </div>
                         </div>
                         <div class="img-row-second">
                             <div class="image-item">
@@ -414,7 +414,7 @@
                                             alt="Thumbnail">
                                     </div>
                                     <div class="image-information">
-                                        <div class="image-title">Heart of a Warrior</div>
+                                        <div class="image-title">Shotgun Love Story</div>
                                         <div class="chainnel-name ">Youtube</div>
                                         <div class="views-status">2.67M views</div>
                                     </div>
