complete ui with responsive

--- a/index.html
+++ b/index.html
@@ -294,7 +294,7 @@
                         </div>
                         <div class="img-row-second">
                             <div class="image-item">
-                                <img src="https://m.media-amazon.com/images/M/MV5BNjgyNzY0OTM3M15BMl5BanBnXkFtZTcwNzk4MjE1Nw@@._V1_QL75_UX402_.jpg"
+                                <img src="https://images.wallpapersden.com/image/download/deepika-padukone-in-ram-leela_aG5pZWuUmZqaraWkpJRmbmdlrWZlam0.jpg"
                                     alt="Boolywood">
                             </div>
                             <div class="image-column">
@@ -327,7 +327,7 @@
                                             alt="Thumbnail">
                                     </div>
                                     <div class="image-information">
-                                        <div class="image-title">Sanam Teri Kasam - A Heartfelt Love Story</div>
+                                        <div class="image-title">Sanam Teri Kasam</div>
                                         <div class="chainnel-name ">youtube</div>
                                         <div class="views-status">1.6M views</div>
                                     </div>
@@ -520,56 +520,114 @@
                         </div>
                     </div>
 
-                    <div class="image-container-row">
-                        <div class="image-row-box">
-                            <div class="image-block">
-                                <img src="https://m.media-amazon.com/images/M/MV5BNzY5MDQzOTAwNV5BMl5BanBnXkFtZTcwNTY0NTk1Nw@@._V1_QL75_UX311_.jpg"
-                                    alt="bollywoodhungama">
-                            </div>
-                            <div class="image-details">
-                                <div class="image-card">
-                                    <div class="thumbnail-box">
-                                        <img src="https://cdn3.iconfinder.com/data/icons/social-network-30/512/social-06-512.png"
-                                            alt="Thumbnail">
-                                    </div>
-                                    <div class="info-section">
-                                        <div class="video-title">Sangeet Ki Duniya</div>
-                                        <div class="channel-info">YouTube</div>
-                                        <div class="views-count">1.6M views</div>
-                                    </div>
-                                    <div class="menu-options">
-                                        <img src="https://i.seadn.io/gae/DxuPyH6YDYWw9cuPYmMv1BTtCiroBh7Nkn94CBthlYxYxXejxNiy80O26i9WdCvpr1Rc5ZIdGl-uGTfjRwdKyV4UfuahE_Cqq205_K8?auto=format&dpr=1&w=1000"
-                                            alt="imgpointbox">
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="image-row-box">
-                            <div class="image-block">
-                                <img src="https://m.media-amazon.com/images/M/MV5BNjgyNzY0OTM3M15BMl5BanBnXkFtZTcwNzk4MjE1Nw@@._V1_QL75_UX402_.jpg"
-                                    width="250px" alt="bollywoodhungama">
-                            </div>
-                            <div class="image-details">
-                                <div class="image-card">
-                                    <div class="thumbnail-box">
-                                        <img src="https://cdn3.iconfinder.com/data/icons/social-network-30/512/social-06-512.png"
-                                            alt="Thumbnail">
-                                    </div>
-                                    <div class="info-section">
-                                        <div class="video-title">Sangeet Ki Duniya</div>
-                                        <div class="channel-info">YouTube</div>
-                                        <div class="views-count">1.6M views</div>
-                                    </div>
-                                    <div class="menu-options">
-                                        <img src="https://i.seadn.io/gae/DxuPyH6YDYWw9cuPYmMv1BTtCiroBh7Nkn94CBthlYxYxXejxNiy80O26i9WdCvpr1Rc5ZIdGl-uGTfjRwdKyV4UfuahE_Cqq205_K8?auto=format&dpr=1&w=1000"
-                                            alt="imgpointbox">
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="">
 
+
+
+
+
+
+
+
+
+
+
+                    <div class="image-container-row">
+                        <div class="image-row-box-one">
+                            <div class="image-row-box">
+                                <div class="image-block">
+                                    <img src="https://m.media-amazon.com/images/M/MV5BNzY5MDQzOTAwNV5BMl5BanBnXkFtZTcwNTY0NTk1Nw@@._V1_QL75_UX311_.jpg"
+                                        alt="bollywoodhungama">
+                                </div>
+                                <div class="image-details">
+                                    <div class="image-card">
+                                        <div class="thumbnail-box">
+                                            <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcR-0vhr20p219OOaVho5qhomivxRjjt7kUrzw&s"
+                                                alt="Thumbnail">
+                                        </div>
+                                        <div class="info-section">
+                                            <div class="video-title">Dangerous Love</div>
+                                            <div class="channel-info">YouTube</div>
+                                            <div class="views-count">1.6M views</div>
+                                        </div>
+                                        <div class="menu-options">
+                                            <img src="https://i.seadn.io/gae/DxuPyH6YDYWw9cuPYmMv1BTtCiroBh7Nkn94CBthlYxYxXejxNiy80O26i9WdCvpr1Rc5ZIdGl-uGTfjRwdKyV4UfuahE_Cqq205_K8?auto=format&dpr=1&w=1000"
+                                                alt="imgpointbox">
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="image-row-box">
+                                <div class="image-block">
+                                    <img src="https://images.wallpapersden.com/image/download/deepika-padukone-in-ram-leela_aG5pZWuUmZqaraWkpJRmbmdlrWZlam0.jpg"
+                                        width="250px" alt="bollywoodhungama">
+                                </div>
+                                <div class="image-details">
+                                    <div class="image-card">
+                                        <div class="thumbnail-box">
+                                            <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTPayMW6grVSESK37-h4aHkQ4PZ9NKI7Cszdg&s"
+                                                alt="Thumbnail">
+                                        </div>
+                                        <div class="info-section">
+                                            <div class="video-title">Love Under Fire</div>
+                                            <div class="channel-info">YouTube</div>
+                                            <div class="views-count">1.6M views</div>
+                                        </div>
+                                        <div class="menu-options">
+                                            <img src="https://i.seadn.io/gae/DxuPyH6YDYWw9cuPYmMv1BTtCiroBh7Nkn94CBthlYxYxXejxNiy80O26i9WdCvpr1Rc5ZIdGl-uGTfjRwdKyV4UfuahE_Cqq205_K8?auto=format&dpr=1&w=1000"
+                                                alt="imgpointbox">
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="image-row-box-two">
+                            <div class="image-row-box">
+                                <div class="image-block">
+                                    <img src="https://i.pinimg.com/736x/0c/95/45/0c95456fc0aa449d203c184fe385c1d1.jpg"
+                                        alt="bollywoodhungama">
+                                </div>
+                                <div class="image-details">
+                                    <div class="image-card">
+                                        <div class="thumbnail-box">
+                                            <img src="https://cdn3.iconfinder.com/data/icons/social-network-30/512/social-06-512.png"
+                                                alt="Thumbnail">
+                                        </div>
+                                        <div class="info-section">
+                                            <div class="video-title">Sanam teri kasam</div>
+                                            <div class="channel-info">YouTube</div>
+                                            <div class="views-count">1.6M views</div>
+                                        </div>
+                                        <div class="menu-options">
+                                            <img src="https://i.seadn.io/gae/DxuPyH6YDYWw9cuPYmMv1BTtCiroBh7Nkn94CBthlYxYxXejxNiy80O26i9WdCvpr1Rc5ZIdGl-uGTfjRwdKyV4UfuahE_Cqq205_K8?auto=format&dpr=1&w=1000"
+                                                alt="imgpointbox">
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="image-row-box">
+                                <div class="image-block">
+                                    <img src="https://c0.wallpaperflare.com/preview/134/815/708/fantasy-fire-smoke-building.jpg"
+                                        alt="bollywoodhungama">
+                                </div>
+                                <div class="image-details">
+                                    <div class="image-card">
+                                        <div class="thumbnail-box">
+                                            <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcR-0vhr20p219OOaVho5qhomivxRjjt7kUrzw&s"
+                                                alt="Thumbnail">
+                                        </div>
+                                        <div class="info-section">
+                                            <div class="video-title">Dangerous Love</div>
+                                            <div class="channel-info">YouTube</div>
+                                            <div class="views-count">1.6M views</div>
+                                        </div>
+                                        <div class="menu-options">
+                                            <img src="https://i.seadn.io/gae/DxuPyH6YDYWw9cuPYmMv1BTtCiroBh7Nkn94CBthlYxYxXejxNiy80O26i9WdCvpr1Rc5ZIdGl-uGTfjRwdKyV4UfuahE_Cqq205_K8?auto=format&dpr=1&w=1000"
+                                                alt="imgpointbox">
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
                     </div>
                 </section>
             </div>
