Updated index.html & style.css, added new images

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
             <nav class="header_one">
                 <div class="navbar-left-icon">
                     <div class="menu-icon">
-                        <img src="https://img.icons8.com/ios11/512/FFFFFF/menu.png" alt="menu icon">
+                        <img src="all_images/menu-icon.png" alt="menu icon">
                     </div>
                     <div class="logo-box">
                         <div class="logo">
@@ -33,7 +33,7 @@
                         </button>
                     </div>
                     <button class="micro-button">
-                        <img src="https://img.icons8.com/?size=100&id=85796&format=png&color=FFFFFF" alt="Mic Icon">
+                        <img src="all_images/mic_icon.png" alt="Mic Icon">
                     </button>
                 </div>
 
@@ -54,7 +54,7 @@
         <main class="main-container">
             <div class="content-wrapper">
                 <aside class="category-left">
-                    <div class="sidbar-section">
+                    <div class="sidebar-section">
                         <section class="section-tittle1">
                             <div class="homebox">
                                 <div class="homeimages-box1">
@@ -129,8 +129,8 @@
                                 </div>
                                 <div class="main-img-tittle-box">
                                     <div class="tittlebox3">ThePrimeTime</div>
-                                    <div class="subscribe-icone">
-                                        <img src="https://img.icons8.com/color/512/youtube-live.png">
+                                    <div class="subscribe-icon">
+                                        <img src="all_images/online_prediction.png">
                                     </div>
                                 </div>
                             </div>
@@ -140,8 +140,8 @@
                                         alt="Watch later">
                                 </div>
                                 <div class="tittlebox3">Muse Asia</div>
-                                <div class="subscribe-icone">
-                                    <img src="https://img.icons8.com/color/512/youtube-live.png">
+                                <div class="subscribe-icon">
+                                    <img src="all_images/online_prediction.png">
                                 </div>
                             </div>
                             <div class="section-tittle-col3">
@@ -150,8 +150,8 @@
                                         alt="Liked">
                                 </div>
                                 <div class="tittlebox3">JImmy carr</div>
-                                <div class="subscribe-icone">
-                                    <img src="https://img.icons8.com/color/512/youtube-live.png">
+                                <div class="subscribe-icon">
+                                    <img src="all_images/online_prediction.png">
                                 </div>
                             </div>
                         </div>
@@ -198,6 +198,7 @@
                         </div>
                     </div>
                 </aside>
+
                 <section class="category-right">
                     <div class="category-grid-row">
                         <div class="category-item-all">All</div>
@@ -222,6 +223,7 @@
                             <img src="all_images/arrow_forward.png" alt="Arrow">
                         </div>
                     </div>
+
                     <div class="image-container">
                         <div class="img-row-first">
                             <div class="image-item">
@@ -339,9 +341,6 @@
                             </div>
                         </div>
                     </div>
-
-
-
 
                     <div class="icon-div">
                         <div class="icon-short">
@@ -520,17 +519,6 @@
                         </div>
                     </div>
 
-
-
-
-
-
-
-
-
-
-
-
                     <div class="image-container-row">
                         <div class="image-row-box-one">
                             <div class="image-row-box">
@@ -655,5 +643,4 @@
         </footer>
     </div>
 </body>
-
 </html>
