--- a/index.html
+++ b/index.html
@@ -502,13 +502,13 @@
                             <div class="image-column">
                                 <div class="image-list-card">
                                     <div class="image-thumbnail1">
-                                        <img src="https://static.vecteezy.com/system/resources/thumbnails/009/840/600/small/happy-krishna-janmashtami-lord-krishna-vector.jpg"
+                                        <img src="https://img.freepik.com/premium-vector/free-vector-beautiful-flying-hummingbird-design-element-banners-posters-leaflets-brochur_1009653-1.jpg"
                                             alt="Thumbnail">
                                     </div>
                                     <div class="image-information">
                                         <div class="image-title">Shotgun Love Story</div>
                                         <div class="chainnel-name ">Youtube</div>
-                                        <div class="views-status">2.72M views</div>
+                                        <div class="views-status">2.70M views</div>
                                     </div>
                                     <div class="options-menubox">
                                         <img src="https://i.seadn.io/gae/DxuPyH6YDYWw9cuPYmMv1BTtCiroBh7Nkn94CBthlYxYxXejxNiy80O26i9WdCvpr1Rc5ZIdGl-uGTfjRwdKyV4UfuahE_Cqq205_K8?auto=format&dpr=1&w=1000"
@@ -535,7 +535,7 @@
                                         <div class="info-section">
                                             <div class="video-title">Dangerous Love</div>
                                             <div class="channel-info">YouTube</div>
-                                            <div class="views-count">1.6M views</div>
+                                            <div class="views-count">1.6K views</div>
                                         </div>
                                         <div class="menu-options">
                                             <img src="https://i.seadn.io/gae/DxuPyH6YDYWw9cuPYmMv1BTtCiroBh7Nkn94CBthlYxYxXejxNiy80O26i9WdCvpr1Rc5ZIdGl-uGTfjRwdKyV4UfuahE_Cqq205_K8?auto=format&dpr=1&w=1000"
@@ -558,7 +558,7 @@
                                         <div class="info-section">
                                             <div class="video-title">Love Under Fire</div>
                                             <div class="channel-info">YouTube</div>
-                                            <div class="views-count">1.6M views</div>
+                                            <div class="views-count">1.4K views</div>
                                         </div>
                                         <div class="menu-options">
                                             <img src="https://i.seadn.io/gae/DxuPyH6YDYWw9cuPYmMv1BTtCiroBh7Nkn94CBthlYxYxXejxNiy80O26i9WdCvpr1Rc5ZIdGl-uGTfjRwdKyV4UfuahE_Cqq205_K8?auto=format&dpr=1&w=1000"
@@ -604,9 +604,9 @@
                                                 alt="Thumbnail">
                                         </div>
                                         <div class="info-section">
-                                            <div class="video-title">Dangerous Love</div>
+                                            <div class="video-title">Ishq Aur Intkam</div>
                                             <div class="channel-info">YouTube</div>
-                                            <div class="views-count">1.6M views</div>
+                                            <div class="views-count">3.6M views</div>
                                         </div>
                                         <div class="menu-options">
                                             <img src="https://i.seadn.io/gae/DxuPyH6YDYWw9cuPYmMv1BTtCiroBh7Nkn94CBthlYxYxXejxNiy80O26i9WdCvpr1Rc5ZIdGl-uGTfjRwdKyV4UfuahE_Cqq205_K8?auto=format&dpr=1&w=1000"
