--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
                         </div>
                         <div class="textbox">YouTube</div>
                     </div>
+                    <div class="inbox">IN</div>
                 </div>
 
                 <div class="search-bar">
