Updated CSS and class name

--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
                     <div class="menu-icon">
                         <img src="all_images/menu-icon.png" alt="menu icon">
                     </div>
-                    <div class="logo-box">
-                        <div class="logo">
+                    <div class="youtubelogo-box">
+                        <div class="youtubelogo">
                             <img src="https://cdn3.iconfinder.com/data/icons/social-network-30/512/social-06-512.png"
                                 alt="youtube">
                         </div>
@@ -25,9 +25,9 @@
                     <div class="inbox">IN</div>
                 </div>
 
-                <div class="search-bar">
-                    <div class="search-bar1">
-                        <input type="text" class="search-bar1-input" placeholder="Search">
+                <div class="search-bar-container">
+                    <div class="search-bar-row">
+                        <input type="text" class="search-barrow-input" placeholder="Search">
                         <button class="search-button">
                             <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcT75SELy7I8F_vR2KQwSl9kI92TgoGW26UtSA&s"
                                 alt="Search">
@@ -220,7 +220,7 @@
                         <div class="category-item-col1">Products</div>
                         <div class="category-item-col1">Dubbing</div>
                         <div class="category-item-col2">Trivia</div>
-                        <div class="image-box122">
+                        <div class="arrow-image-box">
                             <img src="all_images/arrow_forward.png" alt="Arrow">
                         </div>
                     </div>
@@ -293,7 +293,7 @@
                                             alt="imgpointbox">
                                     </div>
                                 </div>
-                                </div>
+                            </div>
                         </div>
                         <div class="img-row-second">
                             <div class="image-item">
