--- a/index.html
+++ b/index.html
@@ -414,7 +414,7 @@
                                             alt="Thumbnail">
                                     </div>
                                     <div class="image-information">
-                                        <div class="image-title">Shotgun Love Story</div>
+                                        <div class="image-title">Dilwale Warriors</div>
                                         <div class="chainnel-name ">Youtube</div>
                                         <div class="views-status">2.67M views</div>
                                     </div>
@@ -460,7 +460,7 @@
                                             alt="Thumbnail">
                                     </div>
                                     <div class="image-information">
-                                        <div class="image-title">Sunset Over Ocean.</div>
+                                        <div class="image-title">Dhamaka Love</div>
                                         <div class="chainnel-name">Pen Movies</div>
                                         <div class="views-status">1.6M views</div>
                                     </div>
@@ -483,7 +483,7 @@
                                             alt="Thumbnail">
                                     </div>
                                     <div class="image-information">
-                                        <div class="image-title">Little Krishna song.</div>
+                                        <div class="image-title">Little Krishna</div>
                                         <div class="chainnel-name ">Youtube</div>
                                         <div class="views-status">2.72M views</div>
                                     </div>
@@ -507,7 +507,7 @@
                                             alt="Thumbnail">
                                     </div>
                                     <div class="image-information">
-                                        <div class="image-title">Shotgun Love Story</div>
+                                        <div class="image-title">Action Hearts</div>
                                         <div class="chainnel-name ">Youtube</div>
                                         <div class="views-status">2.70M views</div>
                                     </div>
